--- a/book_reading/templates/user/book_detail.html
+++ b/book_reading/templates/user/book_detail.html
@@ -206,7 +206,7 @@
                 <button type="submit">Submit Review</button>
             </form>
         {% else %}
-            <p><a href="{% url 'login' %}">Login</a> to add a review.</p>
+            <p><a href="{% url 'book_list' %}">Home</a> to add a review.</p>
         {% endif %}
     </div>
 </body>
