--- a/book_reading/templates/user/book_list.html
+++ b/book_reading/templates/user/book_list.html
@@ -239,7 +239,7 @@
             <li><a href="{% url 'book_list' %}">Home</a></li>
             <li><a href="#" id="search-link">Search</a></li>
             <li><a href="{% url 'book_logout' %}">Log out</a></li>
-            <li><a href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
+            <li><a href="{% url 'user_profile' %}"><i class="fas fa-user"></i> Profile</a></li>
         </ul>
     </nav>
     <h1>Book Library</h1>
