--- a/book_reading/templates/user/register.html
+++ b/book_reading/templates/user/register.html
@@ -9,7 +9,7 @@
     <style>
         /* Background styling */
         .bodybg {
-            background-image: url("../static/ornate-floral-pattern-symbolizes-chinese-winter-celebration-generated-by-ai.jpg");
+            background-image: url("../../static/R.jpg");
             background-size: cover;
             background-attachment: fixed;
             background-repeat: no-repeat;
